--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="de">
 <head>
     <meta charset="utf-8">
-    <title></title>
+    <title>Effektivität achtsamkeitsbasierter Übungen - Studie von Alexander Schmidt</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <style>
         *, *::before, *::after {
