--- a/achtsamkeitsbasierte-techniken/index.html
+++ b/achtsamkeitsbasierte-techniken/index.html
@@ -1,1 +1,108 @@
+<!DOCTYPE html>
+<html lang="de">
+<head>
+    <meta charset="utf-8">
+    <title>Achtsamkeitsbasierte Techniken - Studie von Alexander Schmidt</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <style>
+        *, *::before, *::after {
+            box-sizing: border-box;
+        }
 
+        *, *::before, *::after {
+            box-sizing: border-box;
+        }
+
+        * {
+            margin: 0;
+        }
+
+        body {
+            font-family: system-ui, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
+            line-height: 1.5;
+            -webkit-font-smoothing: antialiased;
+            color: #212529;
+            background-color: #eee;
+            padding: 1rem;
+        }
+
+        img, picture, video, canvas, svg {
+            display: block;
+            max-width: 100%;
+        }
+
+        button {
+            font: inherit;
+            font-weight: 600;
+            color: #133b89;
+            background-color: transparent;
+            border: 2px solid #133b89;
+            padding: 0.5rem 1.5rem;
+            text-align: center;
+            cursor: pointer;
+        }
+
+        button:hover, button:active {
+            background-color: #133b89;
+            color: #fff;
+        }
+
+        p, h1, h2, h3, h4, h5, h6, ul {
+            overflow-wrap: break-word;
+            hyphens: auto;
+            margin-bottom: 1.2rem;
+        }
+
+        #wrapper {
+            margin: 0 auto;
+            padding: 1rem;
+            max-width: 500px;
+            background-color: #fff;
+            border-radius: 5px;
+            box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
+        }
+
+        h1 {
+            font-size: 1.6rem;
+            color: #133b89;
+        }
+
+        h2 {
+            font-size: 1.2rem;
+            margin-bottom: 0.5rem;
+        }
+
+        a {
+            color: #133b89;
+            text-decoration: none;
+        }
+
+        a:hover {
+            text-decoration: underline;
+        }
+
+    </style>
+</head>
+<body>
+
+<div id="wrapper">
+    <h1>Achtsamkeitsbasierte Techniken</h1>
+    <p>
+        Hier können Sie die Audiodateien für die achtsamkeitsbasierten Techniken herunterladen.
+        Für jede Technik können Sie zwischen einer männlichen Stimme (langsamer gesprochen) und einer weiblichen Stimme (schneller gesprochen) wählen.
+    </p>
+
+    <h2>Atemmediation</h2>
+    <ul>
+        <li><a href="https://alexander-schmidt-studie.github.io/achtsamkeitsbasierte-techniken/atemmeditation-maennliche-stimme-langsamer-gesprochen.mp3" target="_blank">Männliche Stimme</a></li>
+        <li><a href="https://alexander-schmidt-studie.github.io/achtsamkeitsbasierte-techniken/atemmeditation-weibliche-stimme-schneller-gesprochen.mp3" target="_blank">Weibliche Stimme</a></li>
+    </ul>
+
+    <h2>Bodyscan</h2>
+    <ul>
+        <li><a href="https://alexander-schmidt-studie.github.io/achtsamkeitsbasierte-techniken/bodyscan-maennliche-stimme-langsamer-gesprochen.mp3" target="_blank">Männliche Stimme</a></li>
+        <li><a href="https://alexander-schmidt-studie.github.io/achtsamkeitsbasierte-techniken/bodyscan-weibliche-stimme-schneller-gesprochen.mp3" target="_blank">Weibliche Stimme</a></li>
+    </ul>
+</div>
+</body>
+</html>
